fix header spacing

--- a/src/root.css
+++ b/src/root.css
@@ -107,7 +107,7 @@ h1, h2, h3, h4, h5, h6, p, a, aside {
 
 /* SPACING */
 
-h2, h3, h4, h5, h6, p {
+p {
   margin-bottom: 1em;
 }
 
